[gd_scene load_steps=10 format=3 uid="uid://b22djxlyx8w7k"]

[ext_resource type="PackedScene" uid="uid://bvxxpkviibu0" path="res://UIObjects/InventoryUI/InventoryUIMenu.tscn" id="1_yprfq"]
[ext_resource type="Script" path="res://UIObjects/InventoryUI/InventoryMenuTemplates/PlayerInventoryUIMenu.gd" id="2_vlsce"]
[ext_resource type="PackedScene" uid="uid://bsn2qp52mn3pq" path="res://UIObjects/PlayerHUD/Hotbar/Hotbar.tscn" id="3_pfrnc"]
[ext_resource type="PackedScene" uid="uid://ef8m0dhykqcp" path="res://UIObjects/InventoryUI/ItemHolderUI/StorageUI.tscn" id="3_xredu"]
[ext_resource type="PackedScene" uid="uid://df722gkjs4pf8" path="res://UIObjects/InventoryUI/ItemHolderUI/LoadoutSlotUI.tscn" id="4_7b7sy"]
[ext_resource type="FontFile" uid="uid://jjpdtk4jb6ea" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="5_8pu3u"]
[ext_resource type="PackedScene" uid="uid://bdg76kaxfhkh8" path="res://UIObjects/InventoryUI/ItemDescription/ItemDetailMenuControl.tscn" id="7_l2385"]
[ext_resource type="PackedScene" uid="uid://do6624cqw3t3q" path="res://UIObjects/InventoryUI/ItemDescription/ItemPopupLabel.tscn" id="8_caumi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qy7k"]
bg_color = Color(0, 0, 0, 0.694118)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PlayerInventoryUIMenu" instance=ExtResource("1_yprfq")]
script = ExtResource("2_vlsce")
drop_item_if_out_of_container = true

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.18
anchor_right = 0.1
anchor_bottom = 0.18
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="InventoryPanel" type="Panel" parent="HBoxContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7qy7k")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_8pu3u")
theme_override_font_sizes/font_size = 24
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerMainStorageUI" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer" index="1" instance=ExtResource("3_xredu")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2" index="0"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ArmourSlotPanel" type="Panel" parent="HBoxContainer/MarginContainer2/VBoxContainer" index="0"]
custom_minimum_size = Vector2(350, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_7qy7k")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer/ArmourSlotPanel" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer/ArmourSlotPanel/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/ArmourSlotPanel/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_8pu3u")
theme_override_font_sizes/font_size = 24
text = "Armour Slot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerArmourSlotUI" parent="HBoxContainer/MarginContainer2/VBoxContainer/ArmourSlotPanel/MarginContainer/VBoxContainer" index="1" instance=ExtResource("4_7b7sy")]
layout_mode = 2
grid_square_width = 3
grid_square_height = 3

[node name="BackpackSlotPanel" type="Panel" parent="HBoxContainer/MarginContainer2/VBoxContainer" index="1"]
custom_minimum_size = Vector2(350, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_7qy7k")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer/BackpackSlotPanel" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer/BackpackSlotPanel/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/BackpackSlotPanel/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_8pu3u")
theme_override_font_sizes/font_size = 24
text = "Backpack Slot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerBackpackSlotControl" parent="HBoxContainer/MarginContainer2/VBoxContainer/BackpackSlotPanel/MarginContainer/VBoxContainer" index="1" instance=ExtResource("4_7b7sy")]
layout_mode = 2
grid_square_width = 3
grid_square_height = 3

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 45

[node name="Hotbar" parent="MarginContainer" index="0" instance=ExtResource("3_pfrnc")]
custom_minimum_size = Vector2(1920, 80)
layout_mode = 2

[node name="ItemDetailMenuControl" parent="." index="2" instance=ExtResource("7_l2385")]
visible = false
layout_mode = 1

[node name="ItemPopupLabel" parent="." index="3" instance=ExtResource("8_caumi")]
visible = false
